[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/Setting/pengaturan.gd" type="Script" id=1]
[ext_resource path="res://assets/font/SHPinscher-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/UI/main menu.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=3]
size = 97
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 41
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxLine" id=4]
color = Color( 0, 0, 0, 0 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1001.0
margin_bottom = 581.0
color = Color( 0.0823364, 0.434598, 0.554688, 1 )

[node name="Title" type="Label" parent="."]
margin_left = 396.0
margin_top = 52.0
margin_right = 642.0
margin_bottom = 182.0
custom_fonts/font = SubResource( 3 )
text = "Setting"

[node name="Music" type="Label" parent="."]
margin_left = 210.0
margin_top = 262.0
margin_right = 308.0
margin_bottom = 312.0
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Game_Slider" type="HSlider" parent="VBoxContainer/Label2"]
visible = false
margin_left = 365.0
margin_top = 71.0
margin_right = 706.0
margin_bottom = 205.0
rect_scale = Vector2( 1.137, 2.712 )
min_value = -30.0
max_value = 0.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 40.0
margin_bottom = 32.0

[node name="Music_Slider" type="HSlider" parent="VBoxContainer/Label"]
margin_left = 325.0
margin_top = 128.0
margin_right = 889.0
margin_bottom = 258.0
rect_scale = Vector2( 1, 2.23 )
min_value = -30.0
max_value = 0.0

[node name="Button" type="Button" parent="."]
margin_left = 14.0
margin_top = 18.0
margin_right = 108.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 2 )
custom_styles/focus = SubResource( 4 )
text = "Back"
icon = ExtResource( 4 )
flat = true

[connection signal="value_changed" from="VBoxContainer/Label/Music_Slider" to="." method="_on_Music_Slider_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
